--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -8,13 +8,16 @@
     android:background="@drawable/side_nav_bar"
     android:backgroundTint="@color/colorPrimary"
     android:gravity="bottom"
+    android:padding="5dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
         android:id="@+id/userImageNavHeader"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="12dp"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
@@ -48,13 +51,13 @@
         android:id="@+id/loginBtnNavHeader"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="4dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
         android:onClick="loginBtnNavClicked"
         android:padding="0dp"
         android:text="Login"
-        android:textAlignment="textStart"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
